# Jepow-AI2-code

./: .env.example  .gitignore  ARCHITECTURE_CONTRACT.md  DEPLOY.md  LICENSE  README.md  SOURCE_CODE_OFFER.md  THIRD_PARTY_NOTICES.md  check_db.cjs  checkout.cjs  convert_colors.cjs  debug_fetch2.cjs  debug_logs.txt  deploy-pull.sh  deploy.sh  deploy_aliyun.sh  desktop.bat  dev.bat  fetch_stats.cjs  fix-git.bat  fix-nginx-dist.sh  fix_admin.cjs  fix_admin_colors.cjs  fix_app_tsx_socket.cjs  fix_cert_emit.cjs  fix_maps.cjs  fix_nginx.cjs  fix_nodes.cjs  fix_posts.cjs  fix_profile_emit.cjs  fix_server.cjs  get_config.cjs  get_cpu.cjs  index.html  list_db.cjs  lldb_commands.txt  metadata.json  nginx.conf.example  package-lock.json  package.json  (+38 more)
app/: replace_landing.js
backups/: db_backup_2026-05-25T08-07-07-548Z.json  db_backup_2026-05-25T10-10-17-674Z.json  db_backup_2026-05-25T11-10-17-684Z.json  db_backup_2026-05-28T13-46-13-739Z.json
electron/: ai-project-bundle.cjs  assets-ipc.cjs  blender-bridge.cjs  blender-cycles-sessions.cjs  cycles-mesh-xml.cjs  cycles-shader-graph-xml.cjs  cycles-texture-stage.cjs  main.cjs  (+9 more)
native/jepow-cycles/: CMakeLists.txt  COMPLIANCE.md  NOTICE  README.md  test-bg-only.xml  test-cube.xml  test-minimal-fixed.xml
native/jepow-cycles/include/: jepow_cycles.h
native/jepow-cycles/src/: jepow_cycles_bridge.cpp
native/jepow-engine/: Cargo.toml
native/jepow-engine/src/: cycles_mesh.rs  daemon.rs  gpu.rs  import_pipeline.rs  jobs.rs  main.rs  mesh_loader.rs  physics_pipeline.rs  render.rs  scene.rs  scene_pick.rs  viewport_host.rs  viewport_session.rs
(+147 files in other folders)
