[package]
name = "jepow-engine"
version = "0.1.0"
edition = "2021"
description = "Jepow native 3D viewport core (CPU job system + GPU via wgpu)"
license = "MIT"

[[bin]]
name = "jepow-engine"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
wgpu = "23"
pollster = "0.4"
gltf = "1.4"
ufbx = "0.8"
tobj = "4.0"
image = "0.25"
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
